--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
+    "lodash.isempty": "^4.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.isempty": "^4.4.7",
     "classnames": "^2.3.1",
     "sass": "^1.51.0"
   }
