--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-responsive": "^9.0.0-beta.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^5.1.0",
     "redux": "^4.2.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
