--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "firebase": "^9.8.2",
     "framer-motion": "^6.3.3",
     "lodash.isempty": "^4.4.0",
     "react": "^18.1.0",
